# sdkgen

./: .gitignore  Cargo.toml  README.md  shell.nix
fixtures/: petstore.yaml
src/apidoc/: Cargo.toml
src/apidoc/src/: lib.rs
src/emitter_csharp/: Cargo.toml
src/emitter_csharp/src/: lib.rs
src/emitter_typescript/: Cargo.toml
src/emitter_typescript/src/: casing_rules.rs  lib.rs
src/sdkgen/: Cargo.toml
src/sdkgen/src/: main.rs
src/sdkgen_adapter_openapi/: Cargo.toml
src/sdkgen_adapter_openapi/src/: lib.rs  schema.rs
src/sdkgen_core/: Cargo.toml
src/sdkgen_core/src/: lib.rs  non_empty_string.rs
src/sdkgen_dotnet/: Cargo.toml
src/sdkgen_emitter_csharp/: Cargo.toml
src/sdkgen_emitter_csharp/src/: casing_rules.rs
src/sdkgen_emitter_typescript/: Cargo.toml
src/sdkgen_emitter_typescript/src/: lib.rs
