[package]
name = "sdkgen"
version = "0.1.0"
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apidoc = { path = "../apidoc" }
emitter_csharp = { path = "../emitter_csharp" }
sdkgen_core = { path = "../sdkgen_core" }
serde = "1.0"
serde_json = "1.0"
