[package]
name = "sdkgen"
version = "0.1.0"
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emitter_csharp = { path = "../emitter_csharp" }
emitter_typescript = { path = "../emitter_typescript" }
indexmap = "1.6"
sdkgen_adapter_openapi = { path = "../sdkgen_adapter_openapi" }
sdkgen_core = { path = "../sdkgen_core" }
serde = "1.0"
serde_json = "1.0"
